Try to fix GitlabCI on Android.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,9 +18,12 @@ buildscript {
     }
 }
 
+apply plugin: 'kotlin'
+
 allprojects {
     repositories {
         mavenLocal()
+        mavenCentral()
         jcenter()
         google()
         maven {
